Fix: .env DATABASE_URL corrected for Render production

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/afterhours"
+DATABASE_URL="postgresql://afterhours_db_user:aFgCxthMylaNoV7KPA8Dqdnqrg7ojdcP@dpg-d13ol7mmcj7s7389m4d0-a.oregon-postgres.render.com/afterhours_db"
