--- a/vercel.json
+++ b/vercel.json
@@ -21,5 +21,6 @@
   ],
   "env": {
     "VITE_API_BASE_URL": "https://your-api-host.herokuapp.com"
-  }
+  },
+  "buildCommand": "cd client && npm run build"
 }
