--- a/vercel.json
+++ b/vercel.json
@@ -5,9 +5,8 @@
       "src": "client/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist",
-        "buildCommand": "cd client && npm install && npm run build",
-        "outputDirectory": "dist"
+        "distDir": "client/dist",
+        "buildCommand": "cd client && npm install && npm run build"
       }
     }
   ],
@@ -24,6 +23,5 @@
   "env": {
     "NODE_ENV": "production",
     "NODE_OPTIONS": "--max_old_space_size=4096"
-  },
-  "buildCommand": "cd client && npm install && npm run build"
+  }
 }
