--- a/client/vercel.json
+++ b/client/vercel.json
@@ -5,15 +5,12 @@
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "dist",
+        "outputDirectory": "dist"
       }
     }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "https://your-api-url.com/api/$1"
-    },
     {
       "src": "/(.*)",
       "dest": "/index.html"
