--- a/vercel.json
+++ b/vercel.json
@@ -3,18 +3,10 @@
   "builds": [
     {
       "src": "client/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "client/dist",
-        "outputDirectory": "client/dist"
-      }
+      "use": "@vercel/static-build"
     }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "https://your-api-url.com/api/$1"
-    },
     {
       "src": "/(.*)",
       "dest": "/index.html"
